; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_bios.c_GetDeviceStats.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_bios.c_GetDeviceStats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@CartridgeArea = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*, i32*)* @GetDeviceStats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetDeviceStats(i32 %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %39 [
    i32 0, label %11
    i32 1, label %15
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %8, align 8
  store i32 1572864, i32* %12, align 4
  %13 = load i32*, i32** %7, align 8
  store i32 32768, i32* %13, align 4
  %14 = load i32*, i32** %9, align 8
  store i32 64, i32* %14, align 4
  store i32 0, i32* %5, align 4
  br label %43

15:                                               ; preds = %4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CartridgeArea, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = and i32 %18, 240
  %20 = icmp eq i32 %19, 32
  br i1 %20, label %21, label %38

21:                                               ; preds = %15
  %22 = load i32*, i32** %8, align 8
  store i32 67108864, i32* %22, align 4
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CartridgeArea, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, 15
  %27 = shl i32 262144, %26
  %28 = load i32*, i32** %7, align 8
  store i32 %27, i32* %28, align 4
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CartridgeArea, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = icmp eq i32 %31, 36
  br i1 %32, label %33, label %35

33:                                               ; preds = %21
  %34 = load i32*, i32** %9, align 8
  store i32 1024, i32* %34, align 4
  br label %37

35:                                               ; preds = %21
  %36 = load i32*, i32** %9, align 8
  store i32 512, i32* %36, align 4
  br label %37

37:                                               ; preds = %35, %33
  store i32 0, i32* %5, align 4
  br label %43

38:                                               ; preds = %15
  store i32 1, i32* %5, align 4
  br label %43

39:                                               ; preds = %4
  %40 = load i32*, i32** %8, align 8
  store i32 0, i32* %40, align 4
  %41 = load i32*, i32** %7, align 8
  store i32 0, i32* %41, align 4
  %42 = load i32*, i32** %9, align 8
  store i32 0, i32* %42, align 4
  store i32 1, i32* %5, align 4
  br label %43

43:                                               ; preds = %39, %38, %37, %11
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
